# LiteGIS

./: Cargo.toml  Dockerfile.ci  README.md
.github/workflows/: build.yml  test.yml
crates/litegis/: Cargo.toml  build.rs
crates/litegis-so/: Cargo.toml
crates/litegis/examples/: static_geos.rs
crates/litegis/src/: lib.rs
