[package]
name = "litegis"
version = "0.0.2"
description = "A geospatial extension for SQLite"
homepage = "https://trailbase.io"
repository = "https://github.com/trailbaseio/LiteGIS"
readme = "../../README.md"
license = "Apache-2.0"
edition = "2024"

[lib]
crate-type=["rlib"]

[dependencies]
geos = { version = "10.0.0", default-features = false, features = ["geo", "json"] }
rusqlite = { version = "0.38.0", features = ["functions"] }
rustc_tools_util = "^0.4.2"

[build-dependencies]
rustc_tools_util = "^0.4.2"
